tests/parser-test-files/bad-files/package.1.error
error: Malformed package declaration
  --> test:2:1
   |
 2 |  (package)
   |   ^^^^^^^ missing package name
